--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://db.onlinewebfonts.com/c/4bad449c3c5c04d6a405ea6b80986aa0?family=Soho+Gothic+Pro");
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;1,200;1,300;1,400&display=swap');
+
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    
+
+}
+body{
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.rec.rec-arrow-left:hover:enabled,
+.rec.rec-arrow-right:hover:enabled{
+    background-color: #ed1c24;
+    box-shadow: 0 0 1px 3px #ed1c24;
 }
+
+.rec.rec-arrow-right{
+    background-color: #ed1c24;
+    color: white;
+}
+
+.rec.rec-arrow-left{
+    background-color: #ed1c24;
+    color: white;
+}
+
+ /* button.rec-dot{
+    border: 0.5px solid #005E9E;
+
+  }
+
+  button.rec-dot:hover,  button.rec-dot:focus  {
+    box-shadow: 0 0 1px 3px #005E9E ;
+  }
+
+ */
+
+ .rec.rec-dot {
+    background: white;
+    border: 1px  solid #005E9E;
+   
+  }
+  .rec.rec-dot_active {
+    background: #005E9E;
+  }
